--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+  width: .6rem;
+}
+
+*::-webkit-scrollbar-track {
+  @apply bg-[#000] rounded-md;
+}
+
+*::-webkit-scrollbar-thumb {
+  @apply bg-primary border-2 border-primary rounded-lg;
+}
